clusters/packages/layer-zero/platform/observability/2-instances/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: grafana-system
spec:
  parentRefs:
    - name: gateway
      namespace: ${PLATFORM_NAMESPACE}
      sectionName: web-https
  hostnames:
    - grafana.${CLUSTER_ZONE}
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: grafana-no-tracing
  namespace: grafana-system
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: grafana-route
  telemetry:
    tracing:
      samplingFraction:
        numerator: 0
      overallSamplingFraction:
        numerator: 0
